# tracker

./: .gitignore  README.md  notes.md  setup-consumer.sh  setup-kafka.sh
terraform/: .gitignore
terraform/deploy/: dynamodb.sh  lambda.sh
terraform/modules/dynamodb/: main.tf  variables.tf
terraform/modules/lambda/: main.tf  outputs.tf  variables.tf
tracker_kafka_consumer/: Dockerfile  pom.xml
tracker_kafka_consumer/src/main/java/com/isaaguilar/java/kafka_consumer/: KafkaConsumerApplication.java
tracker_kafka_consumer/src/main/java/com/isaaguilar/java/kafka_consumer/kafka/: KafkaConsumer.java
tracker_kafka_consumer/src/main/resources/: application.properties
tracker_kafka_consumer/src/test/java/com/isaaguilar/java/kafka_consumer/: KafkaConsumerApplicationTests.java
visit_tracker/: .gitignore  Cargo.toml  Dockerfile  build-zip.sh
visit_tracker/src/: main.rs
