[package]
name = "visit_tracker"
version = "0.1.0"
edition = "2024"

[dependencies]
aws-config = { version = "1.8.6", features = ["behavior-version-latest"] }
aws-sdk-dynamodb = "1.92.0"
base64 = "0.22.1"
chrono = "0.4.42"
lambda_http = "0.17.0"
reqwest = { version = "0.12.23", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
tokio = { version = "1.47.1", features = ["full"] }


[target.'cfg(target_arch = "x86_64")'.dependencies]
rdkafka = { version = "0.38.0", optional = false, features = ["cmake-build"] }

[target.'cfg(not(target_arch = "x86_64"))'.dependencies]
rdkafka = { version = "0.38.0", optional = false }
